--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@popperjs/core": "^2.11.8",
     "aos": "^2.3.4",
     "apexcharts": "^3.44.0",
+    "axios": "^1.7.2",
     "bootstrap": "5.3.0-alpha1",
     "dropzone": "^6.0.0-beta.2",
     "moment": "^2.29.4",
