--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ VITE_DEFAULT_THEME="light-theme"
 VITE_DEFAULT_COLOR="blue-color"
 VITE_DEFAULT_DIRECTION="ltr"
 VITE_APP_URL="http://localhost:8000"
+#VITE_APP_URL="https://back.oms.smartmux.com"
